--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body style="background-image: url(images/fondo1.jpg);" class="hero">
     <header>
-        <img src="img/Logo - copia.png" alt="">
+        <img src="images/Logo - copia.png" alt="">
         <a href="#" class="logo">Space Quiz</a>
 
         <ul class="navlist">
@@ -49,7 +49,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="img/astronauta.png" alt="" class="flotar">
+            <img src="images/astronauta.png" alt="" class="flotar">
         </div>
     </section>
 
