--- a/comiteConfi.html
+++ b/comiteConfi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comité Menú</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel=StyleSheet href="estilos.css" type="text/css" media=screen> 
+    <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
 </head>
 <!DOCTYPE html>
 <html lang="es">
@@ -16,13 +16,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comité Menú</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel=StyleSheet href="estilos.css" type="text/css" media=screen> 
+    <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
 </head>.
 <body style="background-image: url('images/fondo4.jpg');">
-    <div class="container mt-5">
+    <div class="container py-5">
        <!-- CREACION DE CUADRO GRIS PRINCIPAL EXTERNO -->
        <div class="row">
-          <div class="col-md-12 d-flex justify-content-center"">
+          <div class="col-md-12 d-flex justify-content-center">
             <div class="card rounded-4" style="background-color: rgb(219, 219, 219);">
                 <div class="row">
                     <div class="col-md-3 div-superior px-4">
