--- a/comiteListado.html
+++ b/comiteListado.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comité Menú</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel=StyleSheet href="estilos.css" type="text/css" media=screen> 
+    <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
 </head>.
 <body style="background-image: url('images/fondo2.jpg');">
-    <div class="container mt-5">
+    <div class="container py-5">
        <!-- CREACION DE CUADRO GRIS PRINCIPAL EXTERNO -->
        <div class="row">
           <div class="col-md-12 d-flex justify-content-center"">
@@ -163,7 +163,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-2 mt-5">
-                                        <img src="images/loog_python.png" class="custom-image8 " alt="imagen">
+                                        <img src="images/loog_python.png" class="custom-image8" alt="imagen">
                                     </div>    
                                 </div>
                                 <!-- CREACION CUADRO DE SEGUNDA PREGUNTA -->
