--- a/info.html
+++ b/info.html
@@ -4,8 +4,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info Landing Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
 </head>
 <body  style="background-image: url('images/fondo1.jpg');">
-    
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center">
+                <div class="card rounded-5 py-4 px-4" style="background-color: rgb(219, 219, 219);">
+                    <div class="row">
+                        <div class="col-md-3 div-superior px-4">
+                            <a href="#"><img src="images/Preguntados-Logo.png" class="img-fluid" alt="images"></a>
+                        </div>
+                    </div>   
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-7 d-flex">
+                            <div class="card rounded-5 flex-fill py-4 px-4" style="background-color: white;">
+                                <div class="row px-3 py-4">
+                                    <div class="fs-3 fw-bold" style="color: rgb(118, 22, 170);">Misión :</div>
+                                </div>
+                                <div class="card">
+                                    <div class="card-body " style="background-color:rgb(219, 219, 219);">
+                                       <div class="p">Nuestra misión es proporcionar a los profesores una herramienta interactiva
+                                                      y educativa que les permita realizar exámenes de forma entretenida.
+                                       </div>
+                                    </div>
+                                </div>
+                                <div class="row px-3 py-4">
+                                    <div class="fs-3 fw-bold" style="color: rgb(118, 22, 170);">Visión :</div>
+                                </div>
+                                <div class="card">
+                                    <div class="card-body " style="background-color:rgb(219, 219, 219);">
+                                       <div class="p">Convertir en la plataforma líder en la realización de
+                                                      exámenes, ofreciendo una solución personalizable 
+                                                      para la evaluación de los estudiantes.
+                                       </div>
+                                    </div>
+                                </div>
+                                <div class="row px-3 py-4">
+                                    <div class="fs-3 fw-bold" style="color: rgb(118, 22, 170);">Información de los desarrolladores :</div>
+                                </div>
+                                <div class="card">
+                                    <div class="card-body " style="background-color:rgb(219, 219, 219);">
+                                       <div class="p">-Arcos Tejeda, José David <br>
+                                                      -Beteta Espinoza, Sebastián Adauco <br>
+                                                      -Larez Mauricio, Delvin Onil <br>
+                                                      -Torres Pérez, Carlitos Mikhaeñ <br>
+                                       </div>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                            <div class="col-md-5 d-flex">
+                                <div class="card rounded-5 flex-fill py-4 px-4" style="background-color: white;">
+                                    <div class="row px-3 mx-auto">
+                                        <div class="fs-5 fw-bold" style="color: rgb(118, 22, 170);">Información del Desarrollador:</div>
+                                    </div>
+                                    <div class="card col-md-8 mx-auto">
+                                        <div class="card-body ">
+                                            <img src="images/foto_carlitos.jpeg" class="img-fluid circular--square" alt="images">
+                                        </div>
+                                    </div>
+                                    <div class="row px-3 py-4 mx-auto">
+                                        <div class="fs-5 fw-bold" style="color: rgb(118, 22, 170);">Torres Pérez, Carlitos Mikhael</div>
+                                    </div>
+                                    <div class="px-5">
+                                        <div class="card px-3 rounded-5 " style="background-color:rgb(219, 219, 219);">
+                                            <div class="col-md-8 mx-auto mt-3">
+                                                <div class="fs-6 fw-bold " style="color: rgb(118, 22, 170);">Puesto: Desarrollador Web</div>
+                                            </div>
+                                            <div class="col-md-5 mx-auto mt-2">
+                                                <div class="fs-6 fw-bold " style="color: rgb(118, 22, 170);">Estudios: Tecsup</div>
+                                            </div>
+                                            <div class="col-md-11 mx-auto py-2">
+                                                <div class="fs-6 fw-bold " style="color: rgb(118, 22, 170);">Correo: carlitos.torres@tecsup.edu.pe</div>
+                                            </div>
+                                            <div class="row py-2 px-5"> 
+                                                    <div class="col-md-3 mx-auto">
+                                                        <a href="#"><img src="images/icono_facebook.jpg" class="img-fluid custom-image9" alt="images"></a>
+                                                    </div>
+                                                    <div class="col-md-3 mx-auto">
+                                                        <a href="#"><img src="images/icono_instagram.png" class="img-fluid custom-image9" alt="images"></a>
+                                                    </div>
+                                                    <div class="col-md-3 mx-auto">
+                                                        <a href="#"><img src="images/icono_linked.png" class="img-fluid custom-image9 " alt="images"></a>
+                                                    </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>      
+                        </div>
+                    </div>  
+                </div>
+            </div> 
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
 </body>
 </html>
