--- a/landing.html
+++ b/landing.html
@@ -23,15 +23,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Permanent+Marker&family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
-<body style="background-image: url(images/fondo1.jpg);" class="hero">
+<body style="background-image: url(images/venus1prueba.jpg);" class="hero">
+    <div class="container">
     <header>
         <img src="images/Logo - copia.png" alt="">
-        <a href="#" class="logo">Space Quiz</a>
+        <a href="landing.html" class="logo">Space Quiz</a>
 
         <ul class="navlist">
             <li><a href="info.html">Más Información</a></li>
             <li><a href="jugar.html">¿Cómo jugar?</a></li>
-            <li><a href="login.html">Registrar</a></li>
+            <li><a href="registro_tipo.html">Registrar</a></li>
 
 
 
@@ -45,7 +46,7 @@
             <h1>SPACE QUIZ</h1>
             <p>¡Tu espacio para poder aprender y jugar a la vez!</p>
             <a href="registro.html">Registrarme</a>
-            <a href="login.html" class="ctaa"><i class="ri-login-box-line"></i>Iniciar sesión</a>
+            <a href="registro_tipo.html" class="ctaa"><i class="ri-login-box-line"></i>Iniciar sesión</a>
         </div>
 
         <div class="hero-img">
@@ -62,5 +63,6 @@
 
     <!-- Javascript -->
     <script src="js/script.js"></script>
+</div>
 </body>
 </html>
