--- a/loginDocente.html
+++ b/loginDocente.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Comité</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -28,13 +28,13 @@
             <div class="nav_list">
                 <!--Div más info-->
                 <div class="box_link">
-                    <a href="" class="nav_link">
+                    <a href="info.html" class="nav_link">
                         <p class="nav_text">Mas info</p>
                     </a>
                 </div>
                 <!--Div de ¿cómo jugar?-->
                 <div class="box_link">
-                    <a href="" class="nav_link">
+                    <a href="jugar.html" class="nav_link">
                         <p class="nav_text">Cómo jugar?</p>
                     </a>
                 </div>
@@ -107,7 +107,7 @@
                                     <input type="text" placeholder="Contraseña" class="input_login form-control">
                                 </div>
                                 <div class="text-center login_div_input">
-                                    <a href="comiteMenu.html"><input type="button" value="Ingresar" class="login_btn"></a>
+                                    <a href="menuprofesores.html"><input type="button" value="Ingresar" class="login_btn"></a>
                                 </div>
                             </form>
                         </div>
