--- a/comiteListado.html
+++ b/comiteListado.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
 </head>.
-<body style="background-image: url('images/fondo2.jpg');">
+<body style="background-image: url('images/fondo4.jpg');">
     <div class="container py-5">
        <!-- CREACION DE CUADRO GRIS PRINCIPAL EXTERNO -->
        <div class="row">
@@ -16,7 +16,7 @@
             <div class="card rounded-4" style="background-color: rgb(219, 219, 219);">
                 <div class="row">
                     <div class="col-md-3 div-superior px-4">
-                        <a href="#"><img src="images/Preguntados-Logo.png" class="img-fluid" alt="images"></a>
+                        <a href="landing.html"><img src="images/Preguntados-Logo.png" class="img-fluid" alt="images"></a>
                     </div>
                 </div>
                <div class="card-body">
@@ -70,7 +70,7 @@
                                      </div>
                                      </a>
                                      <!-- CREACION DE BOTON DE QUIZ.COM -->
-                                     <a href="comiteMenu.html">
+                                     <a href="landing.html">
                                      <div class="row g-0 mt-3">
                                         <div class="col-md-3">
                                             <img src="images/icono_net.png" class="img-fluid img-thumbnail custom-image5" alt="imagen">
@@ -81,7 +81,7 @@
                                      </div>
                                      </a>
                                      <!-- CREACION DE BOTON LISTADO DE PREGUNTAS -->
-                                     <a href="#">
+                                     <a href="javascript:history.back()">
                                      <div class="row g-0 mt-3">
                                         <div class="col-md-3">
                                             <img src="images/icono_retroceder.png" class="img-fluid img-thumbnail custom-image6" alt="imagen">
