--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
                 <div class="card rounded-5 py-4 px-4" style="background-color: rgb(219, 219, 219);">
                     <div class="row">
                         <div class="col-md-3 div-superior px-4">
-                            <a href="#"><img src="images/Preguntados-Logo.png" class="img-fluid" alt="images"></a>
+                            <a href="index.html"><img src="images/Preguntados-Logo.png" class="img-fluid" alt="images"></a>
                         </div>
                     </div>   
                     <div class="card-body">
