--- a/loginEstudiante.html
+++ b/loginEstudiante.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Comité</title>
+    <title>LoginComite</title>
     <link rel="stylesheet" href="css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -107,7 +107,7 @@
                                     <input type="text" placeholder="Contraseña" class="input_login form-control">
                                 </div>
                                 <div class="text-center login_div_input">
-                                    <a href="comiteMenu.html"><input type="button" value="Ingresar" class="login_btn"></a>
+                                    <a href="home_alumno.html"><input type="button" value="Ingresar" class="login_btn"></a>
                                 </div>
                             </form>
                         </div>
