--- a/landing.html
+++ b/landing.html
@@ -23,6 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Permanent+Marker&family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
+<!-- Definiendo fondo de Landing Page -->
 <body style="background-image: url(images/venus1prueba.jpg);" class="hero">
     <div class="container">
     <header>
@@ -45,7 +46,7 @@
             <h4>Bienvenido a</h4>
             <h1>SPACE QUIZ</h1>
             <p>¡Tu espacio para poder aprender y jugar a la vez!</p>
-            <a href="registro.html">Registrarme</a>
+            <a href="registro_tipo.html">Registrarme</a>
             <a href="registro_tipo.html" class="ctaa"><i class="ri-login-box-line"></i>Iniciar sesión</a>
         </div>
 
@@ -53,14 +54,6 @@
             <img src="images/astronauta.png" alt="" class="flotar">
         </div>
     </section>
-
-    <div class="scroll-down">
-        <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
-    </div>
-
-    <!-- efecto para el scroll -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-
     <!-- Javascript -->
     <script src="js/script.js"></script>
 </div>
