--- a/loginComite.html
+++ b/loginComite.html
@@ -63,37 +63,35 @@
             <!--div de cuadro que contiene la imagen y el formulario de login-->
             <div class="main_login">
                 <!--sección imagen-->
-                <div class="col-6 card box_main_img">
-                    <img src="images/fondo8.jpg" alt="" width="100%" height="100%">
+                <div class="col-6 card box_main_img rounded-4">
+                    <img src="images/perfilAstronauta.jpg" class="rounded-4" alt="" width="100%" height="100%">
                     <!--Texto contenido en la imagen-->
-                    <div class="card-img-overlay d-flex align-items-start flex-column bd-highlight mb-3 ">
+                    <div class="card-img-overlay d-flex align-items-start flex-column bd-highlight mb-3  ">
                         <div class="p-2  d-flex flex-column justify-content-center w-100 h-50">
                             <!--Texto superior-->
                             <div class="d-flex align-items-center justify-content-center h-50">
-                                <p class=" login_img_text Limg_text_sup">Estás a punto de
-                                    conocer SPACES QUIZ</p>
+                                <p class=" login_img_text Limg_text_sup"></p>
                             </div>
                             <div class="d-flex align-items-start justify-content-center h-50">
-                                <p class=" login_img_text Limg_text_mid">¿Estás listo?</p>
+                                <p class=" login_img_text Limg_text_mid"></p>
                             </div>
                         </div>
 
-                        <div class="p-2   d-flex justify-content-center w-100 h-50">
+                        <div class="p-2   d-flex justify-content-center w-100 h-50 ">
                             <!--Texto inferior-->
                             <p class=" login_img_text Limg_text_bot d-flex align-items-end ">
-                                Una única e interactiva plataforms que medirá tus conocimientos, memoria y velocidad
-                                sobre tu carrera profesional.
+                               
                             </p>
                         </div>
 
                     </div>
                 </div>
                 <!--Segundo div, es el espacio donde estará el login-->
-                <div class="col-lg-6  col-12 d-flex justify-content-center align-items-center box_main_form">
+                <div class="col-lg-6  col-12 d-flex justify-content-center align-items-center box_main_form ">
                     <!--Div de todo el login -->
-                    <div class="div_login d-flex justify-content-center flex-column">
+                    <div class="div_login d-flex justify-content-center flex-column ">
                         <!--Div del titulo de iniciar sesion-->
-                        <div class="d-flex align-items-end justify-content-center h-25">
+                        <div class="d-flex align-items-end justify-content-center h-25 ">
                             <p class="login_title">Iniciar sesión</p>
                         </div>
                         <!--Div del formulario de login-->
