--- a/comiteListado.html
+++ b/comiteListado.html
@@ -8,12 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
 </head>.
-<body style="background-image: url('images/fondo4.jpg');">
+<body style="background-image: url('images/FondoEspacio5.jpg');">
     <div class="container py-5">
        <!-- CREACION DE CUADRO GRIS PRINCIPAL EXTERNO -->
        <div class="row">
           <div class="col-md-12 d-flex justify-content-center"">
-            <div class="card rounded-4" style="background-color: rgb(219, 219, 219);">
+            <div class="card rounded-4" style="background-color:rgba(205, 205, 227, 0.8);">
                 <div class="row">
                     <div class="col-md-3 div-superior px-4">
                         <a href="landing.html"><img src="images/Preguntados-Logo.png" class="img-fluid" alt="images"></a>
