--- a/jugar.html
+++ b/jugar.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
 </head>
-<body style="background-image: url(images/fondo2.jpg);">
+<body style="background-image: url(images/FondoEspacio4.jpg);">
     <div class="container py-5">
         <div class="row">
             <!-- CONSTRUYENDO PRIMERA COLUMNA QUE OCUPA 7 ESPACIOS -->
             <div class="col-md-7">
                 <!-- CONSTRUYENDO CARD EXTERIOR DE COLOR GRIS -->
-                <div class="rounded-5 px-4 py-4" style="background-color: rgb(219, 219, 219);">
+                <div class="rounded-5 px-4 py-4" style="background-color:rgba(205, 205, 227, 0.8);">
                     <!-- CONSTRUYENDO CARD BLANCO DENTRO DE CARD GRIS -->
                     <div class="rounded-5" style="background-color: white;">
                         <!-- DEFINIENDO FILA CON IMAGEN DE COMO JUGAR Y SU TITULO -->
@@ -86,7 +86,7 @@
             </div>
             <!-- DEFINIENDO LAS 5 COLUMNAS QUE USARA LA IMAGEN DEL ASTRONAUTA  -->
             <div class="col-md-5">
-                <img src="images/astronauta5.jpg" class="image-fluid mx-auto mt-5 custom-image12" alt="image">
+                <img src="images/astronauta5.jpg" class="image-fluid mx-auto mt-5 custom-image12 flotar" alt="image">
             </div>
         </div>   
     </div>
