--- a/loginDocente.html
+++ b/loginDocente.html
@@ -64,25 +64,23 @@
             <div class="main_login">
                 <!--sección imagen-->
                 <div class="col-6 card box_main_img">
-                    <img src="images/fondo8.jpg" alt="" width="100%" height="100%">
+                    <img src="images/perfilDocente.jpg" alt="" width="100%" height="100%">
                     <!--Texto contenido en la imagen-->
                     <div class="card-img-overlay d-flex align-items-start flex-column bd-highlight mb-3 ">
                         <div class="p-2  d-flex flex-column justify-content-center w-100 h-50">
                             <!--Texto superior-->
                             <div class="d-flex align-items-center justify-content-center h-50">
-                                <p class=" login_img_text Limg_text_sup">Estás a punto de
-                                    conocer SPACES QUIZ</p>
+                                <p class=" login_img_text Limg_text_sup"></p>
                             </div>
                             <div class="d-flex align-items-start justify-content-center h-50">
-                                <p class=" login_img_text Limg_text_mid">¿Estás listo?</p>
+                                <p class=" login_img_text Limg_text_mid"></p>
                             </div>
                         </div>
 
                         <div class="p-2   d-flex justify-content-center w-100 h-50">
                             <!--Texto inferior-->
                             <p class=" login_img_text Limg_text_bot d-flex align-items-end ">
-                                Una única e interactiva plataforms que medirá tus conocimientos, memoria y velocidad
-                                sobre tu carrera profesional.
+                               
                             </p>
                         </div>
 
