--- a/registroEstudiante.html
+++ b/registroEstudiante.html
@@ -112,7 +112,7 @@
                 
                 <div class="col-lg-6 card box_main_img  d-flex justify-content-center align-items-center box_main_form" style="background-color: aqua;"> <!--seccion imagen-->
         
-                        <img src="images/nave1.jpg" alt="" width="100%" height="100%">
+                        <img src="images/perfilEstudiante.jpg" alt="" width="100%" height="100%">
                         <div class="card-img-overlay d-flex align-items-start flex-column bd-highlight mb-3 ">
                             <div class="p-2  d-flex flex-column justify-content-center" style="width: 100%; height: 50%;">
                                 <!--Texto superiore-->
