--- a/menuprofesores.html
+++ b/menuprofesores.html
@@ -21,7 +21,7 @@
     <meta name="robots" content="noindex, follow">
 </head>
 
-<body>
+<body style="background-image: url(images/marte3.jpg);">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
           <b class="navbar-brand">
