--- a/juego_estudiante2.html
+++ b/juego_estudiante2.html
@@ -126,7 +126,7 @@
                     </div>
                     <!--Pasar a la anterior pregunta-->
                     <div>
-                        <a href="juego_estudiante2.html"><i class="fa-solid fa-caret-right" style="color: white;font-size: 40px;"></i></a>
+                        <a href="resultados_estudiante.html"><i class="fa-solid fa-caret-right" style="color: white;font-size: 40px;"></i></a>
                     </div>
                 </div>
             </div>
