--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
     <title>Landing Page - Space Quiz</title>
 
     <!-- Link para CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <!-- En esta ocasión usé boxicons (como fontawesome) -->
     <link rel="stylesheet" 
