--- a/codigosala.html
+++ b/codigosala.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/codigosala.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
 </head>
 
 <!-- Body con css para la imagen de fondo -->
-<body>
+<body style="background-image: url(images/marte8.jpg);">
     <!-- Estableciendo NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container-fluid px-3">
@@ -39,11 +39,11 @@
         </div>
     </nav>
     <!-- Creación de container que contiene cuerpo del cuerpo de la página -->
-    <div class="container col-md-12" id="cuerpo">
+    <div class="container col-md-7">
         <div class="responsive-container">
             <!-- Estabkeciendo color de fondo transparente -->
             <div style="background-color: rgba(255, 255, 255, 0.5);">
-                <div id="encabezado" class="container">
+                <div id="encabezado2" class="container">
                     <h2>Código de la sala</h2>
                     <!-- Estableciendo redondeado -->
                     <div class="codigo-sala rounded-5">
