--- a/comiteNueva.html
+++ b/comiteNueva.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comité Menú</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
+    <link rel=StyleSheet href="css/styles.css" type="text/css" media=screen> 
 </head>.
 <body style="background-image: url('images/FondoEspacio5.jpg');">
     <div class="container py-5">
