--- a/configuracion.html
+++ b/configuracion.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/configuracion.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
     <meta name="robots" content="noindex, follow">
     
 </head>
-<body>
+<body style="background-image: url(images/Marte1.jpg);">
     <!-- Estableciendo creación del navBar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-black">
         <div class="container-fluid px-3">
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <!-- Estableciendo cuerpo de la creación del juego por parte del docente -->
-    <div class="container col-md-12 py-3" id="cuerpo">
+    <div class="container col-md-12 py-2" id="cuerpo">
         <!-- Estabkeciendo color transparente del container -->
         <div style="background-color: rgba(97, 97, 97, 0.5);" class="rounded-5">
             <p></p>
