--- a/home_alumno.html
+++ b/home_alumno.html
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles/home_alumno.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background-image: url(images/Venus2prueba.jpg);">
     <!-- Desconozco, pero al parecer aumenta el rango en altura del cuerpo -->
     <div style="display: flex;flex-direction: column; height: 100vh;">
         <!-- Estableciendo NavBar -->
@@ -70,7 +70,7 @@
                                 </div>
                                 <!-- Definiendo botón de Ingresar con sus estilos -->
                                 <div class="text-center" style="padding: 20px 0px 10px 0px;">
-                                    <a href="sala_espera_alumno.html">
+                                    <a href="juego_estudiante.html">
                                         <div type="button" name="" id="" class="btn btn-danger btn-lg btn-outline-info fs-2 text-dark fw-semibold">Ingresar</div>
                                     </a>
                                 </div>
