--- a/jugar.html
+++ b/jugar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Cómo jugar?</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel=StyleSheet href="css/estilos.css" type="text/css" media=screen> 
+    <link rel=StyleSheet href="css/styles.css" type="text/css" media=screen> 
 </head>
 <body style="background-image: url(images/FondoEspacio4.jpg);">
     <div class="container py-5">
@@ -86,7 +86,7 @@
             </div>
             <!-- DEFINIENDO LAS 5 COLUMNAS QUE USARA LA IMAGEN DEL ASTRONAUTA  -->
             <div class="col-md-5">
-                <img src="images/astronauta5.jpg" class="image-fluid mx-auto mt-5 custom-image12 flotar" alt="image">
+                <img src="images/astronauta5.jpg" class="image-fluid mx-auto mt-5 custom-image18 flotar" alt="image">
             </div>
         </div>   
     </div>
