--- a/login.html
+++ b/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/login.css">
+    <title>Login Comité</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -28,13 +28,13 @@
             <div class="nav_list">
                 <!--Div más info-->
                 <div class="box_link">
-                    <a href="info.html" class="nav_link">
+                    <a href="" class="nav_link">
                         <p class="nav_text">Mas info</p>
                     </a>
                 </div>
                 <!--Div de ¿cómo jugar?-->
                 <div class="box_link">
-                    <a href="jugar.html" class="nav_link">
+                    <a href="" class="nav_link">
                         <p class="nav_text">Cómo jugar?</p>
                     </a>
                 </div>
@@ -63,10 +63,10 @@
             <!--div de cuadro que contiene la imagen y el formulario de login-->
             <div class="main_login">
                 <!--sección imagen-->
-                <div class="col-6 card box_main_img">
-                    <img src="images/perfilDocente.jpg" alt="" width="100%" height="100%">
+                <div class="col-6 card box_main_img rounded-4">
+                    <img src="images/perfilAstronauta.jpg" class="rounded-4" alt="" width="100%" height="100%">
                     <!--Texto contenido en la imagen-->
-                    <div class="card-img-overlay d-flex align-items-start flex-column bd-highlight mb-3 ">
+                    <div class="card-img-overlay d-flex align-items-start flex-column bd-highlight mb-3  ">
                         <div class="p-2  d-flex flex-column justify-content-center w-100 h-50">
                             <!--Texto superior-->
                             <div class="d-flex align-items-center justify-content-center h-50">
@@ -77,7 +77,7 @@
                             </div>
                         </div>
 
-                        <div class="p-2   d-flex justify-content-center w-100 h-50">
+                        <div class="p-2   d-flex justify-content-center w-100 h-50 ">
                             <!--Texto inferior-->
                             <p class=" login_img_text Limg_text_bot d-flex align-items-end ">
                                
@@ -87,11 +87,11 @@
                     </div>
                 </div>
                 <!--Segundo div, es el espacio donde estará el login-->
-                <div class="col-lg-6  col-12 d-flex justify-content-center align-items-center box_main_form">
+                <div class="col-lg-6  col-12 d-flex justify-content-center align-items-center box_main_form ">
                     <!--Div de todo el login -->
-                    <div class="div_login d-flex justify-content-center flex-column">
+                    <div class="div_login d-flex justify-content-center flex-column ">
                         <!--Div del titulo de iniciar sesion-->
-                        <div class="d-flex align-items-end justify-content-center h-25">
+                        <div class="d-flex align-items-end justify-content-center h-25 ">
                             <p class="login_title">Iniciar sesión</p>
                         </div>
                         <!--Div del formulario de login-->
@@ -105,7 +105,16 @@
                                     <input type="text" placeholder="Contraseña" class="input_login form-control">
                                 </div>
                                 <div class="text-center login_div_input">
-                                    <a href="menuprofesores.html"><input type="button" value="Ingresar" class="login_btn"></a>
+                                    <a href="comiteMenu.html"><input type="button" value="IngresarComité" class="login_btn"></a>
+                                </div>
+
+                                <div class="text-center login_div_input">
+                                    <a href="menuprofesores.html"><input type="button" value="IngresarDocente" class="login_btn"></a>
+                                </div>
+
+
+                                <div class="text-center login_div_input">
+                                    <a href="home_alumno.html"><input type="button" value="IngresarEstudiante" class="login_btn"></a>
                                 </div>
                             </form>
                         </div>
