--- a/menuprofesores.html
+++ b/menuprofesores.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/menuprofesores.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
           </b>
       </div>
 
-      <div class="col-2" id="navclock">
+      <div class="col-2" id="navclock2">
           <div class="d-flex align-items-center justify-content-center">
               <i class="ri-home-fill"></i>
               <i class="ri-user-line" id="usuarionav"></i>
@@ -38,13 +38,13 @@
       </div>
   </nav>
 
-  <div class="container col-md-12" id="cuerpo">
+  <div class="container col-md-12" id="cuerpo2">
       <div style="background-color: rgba(128, 128, 128, 0.5);">
           <p></p>
           <div id="encabezado" class="container">
               <div class="row">
                   <img src="images/astro.png" alt="">
-                  <div class="col-sm-10 d-flex align-items-center justify-content-center" id="pregunta">
+                  <div class="col-sm-10 d-flex align-items-center justify-content-center" id="preguntaB">
                       <b>¡BIENVENIDO, CREA TU JUEGO Y EVALÚA!</b>
                   </div>
                   <a href="configuracion.html">
@@ -69,7 +69,7 @@
           <div id="respuestas" class="mt-5" style="padding-left: 5%;">
               <div class="row justify-content-center">
                   <div class="col-sm-4">
-                    <div class="card fondogris" style="width: 18rem;">
+                    <div class="card fondogris2" style="width: 18rem;">
                         <div class="card-body d-flex flex-column align-items-center justify-content-center">
                             <div class="card-title-container fondoverde">
                                 <h5 class="card-title">AULA 2C-24A</h5>
@@ -79,7 +79,7 @@
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="card fondogris" style="width: 18rem;">
+                    <div class="card fondogris2" style="width: 18rem;">
                       <div class="card-body d-flex flex-column align-items-center justify-content-center">
                           <div class="card-title-container fondoverde">
                               <h5 class="card-title">AULA 2C-24B</h5>
@@ -89,7 +89,7 @@
                   </div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="card fondogris" style="width: 18rem;">
+                    <div class="card fondogris2" style="width: 18rem;">
                       <div class="card-body d-flex flex-column align-items-center justify-content-center">
                           <div class="card-title-container fondoverde">
                               <h5 class="card-title">AULA 2C-24C</h5>
@@ -101,7 +101,7 @@
               </div>
               <div class="row mt-4">
                   <div class="col-sm-4">
-                    <div class="card fondogris" style="width: 18rem;">
+                    <div class="card fondogris2" style="width: 18rem;">
                       <div class="card-body d-flex flex-column align-items-center justify-content-center">
                           <div class="card-title-container fondoverde">
                               <h5 class="card-title">AULA 3C-24A</h5>
@@ -111,7 +111,7 @@
                   </div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="card fondogris" style="width: 18rem;">
+                    <div class="card fondogris2" style="width: 18rem;">
                       <div class="card-body d-flex flex-column align-items-center justify-content-center">
                           <div class="card-title-container fondoverde">
                               <h5 class="card-title">AULA 3C-24B</h5>
@@ -121,7 +121,7 @@
                   </div>
                   </div>
                   <div class="col-sm-4">
-                    <div class="card fondogris" style="width: 18rem;">
+                    <div class="card fondogris2" style="width: 18rem;">
                       <div class="card-body d-flex flex-column align-items-center justify-content-center">
                           <div class="card-title-container fondoverde">
                               <h5 class="card-title">AULA 3C-24B</h5>
