--- a/registroComite.html
+++ b/registroComite.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -99,7 +99,7 @@
 
                             <div>
                                 <div class="d-flex justify-content-center" style="padding-top: 30px;"><!--Caja de boton de registrarme-->
-                                    <a href="loginComite.html"><input type="button" value="Registrarme"  class="btn btn-danger btn-outline-secondary btn-lg"  style="color: rgb(0, 0, 0)" >    
+                                    <a href="login.html"><input type="button" value="Registrarme"  class="btn btn-danger btn-outline-secondary btn-lg"  style="color: rgb(0, 0, 0)" >    
                                 </div>
                                 <div class="d-flex justify-content-center" style="padding-top: 50px;"><!--Iniciar sesion-->
                                     <p class="d-flex " style="display: flex;">¿Tienes una cuenta? <a
